--- a/templates/index.html
+++ b/templates/index.html
@@ -78,7 +78,7 @@
 			<div class="col-lg-4 col-sm-3">
 				<i class="fa fa-map-marker"></i>
 				<h4>OUR ADDRESS</h4>
-<p>Kilometro 3, Barrio El Diamante, Girardot</p>
+<p>Kilómetro 3, Barrio El Diamante, Girardot</p>
 				
 			</div><!-- col-lg-4 -->
 
