--- a/templates/paginaDocente/inicio-profe.html
+++ b/templates/paginaDocente/inicio-profe.html
@@ -27,7 +27,7 @@
                     <div class="panel panel-info">
                       <div class="panel-heading">Panel de Administración</div>
                       <div class="panel-body">
-                        <p>Bienvenido profesor <strong>{{ usuario.id.first_name }} {{ usuario.id.last_name }}</strong>, Este es el  panel de administración de <strong>Easy English</strong>, aquí podrá registrar nuevos estudiantes, ingresar notas parciales y generar reportes!</p>
+                        <p>Bienvenido profesor <strong>{{ usuario.id.first_name }} {{ usuario.id.last_name }}</strong>, Este es el  panel de administración de <strong>Easy English</strong>, aquí podrá registrar nuevos estudiantes, ingresar notas parciales y ver reportes!</p>
                           <p></p>
                       </div>
                     </div>
@@ -64,11 +64,11 @@
                                     </div>
                                     <div class="col-xs-9 text-right">
                                         <div class="huge">Registro</div>
-                                        <div>Notas Parciales!</div>
+                                        <div>Estudiantes</div>
                                     </div>
                                 </div>
                             </div>
-                            <a href="{% url 'notas' %}">
+                            <a href="{% url 'registro-estudiante' %}">
                                 <div class="panel-footer">
                                     <span class="pull-left">Ver</span>
                                     <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
