--- a/templates/plantilla1.html
+++ b/templates/plantilla1.html
@@ -38,7 +38,7 @@
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
             <li class="active"><a href="{% url 'index' %}">HOME</a></li>
-            <li><a href="{% url 'curso' %}">INFORMATION</a></li>
+            <!-- <li><a href="{% url 'curso' %}">INFORMATION</a></li> -->
             <li><a href="{% url 'contacto' %}"><i class="fa fa-envelope-o"></i> CONTACT</a></li>
           </ul>
         </div><!--/.nav-collapse -->
@@ -57,9 +57,9 @@
 		<div class="container">
 			<div class="row centered">
                 <div class="col-md-3">
-                    <p>Escuela Normal Superior María Auxiliadora of Girardot <br />
-                    Kilometro 3, Barrio El Diamante<br />
-                    Para mayor información comuniquese al: (1) 000 29 00
+                    <p>Escuela Normal Superior María Auxiliadora de Girardot <br />
+                    Kilómetro 3, Barrio El Diamante<br />
+                    Para mayor información comuníquese al: (1) 000 29 00
                 </p></div>
                 <div class="col-sm-3 col-md-3 pull-right">
                     <div class="centered"> <img src="{% static 'img/Escudo.png' %}" class="img-responsive" alt=""/></div> </div>
@@ -73,14 +73,14 @@
 			<div class="container">
 				<div class="row downLine">
 					<div class="col-md-6 text-left copy">
-						<p>Copyright &copy; Escuela Normal Superior María Auxiliadora of Girardot.</p>
+						<p>Copyright &copy; Escuela Normal Superior María Auxiliadora de Girardot.</p>
 					</div>
 					<div class="col-md-6 text-right dm">
 
 						<ul id="downMenu">
 
 							<li class="active"><a href="{% url 'index' %}">Home</a></li>
-							<li><a href="{% url 'curso' %}">Institution</a></li>
+							<!-- <li><a href="{% url 'curso' %}">Institution</a></li> -->
 							<li><a href="{% url 'contacto' %}">Contact</a></li>
 						</ul>
 					</div>
